kubernetes-2/namespace/devops/prometheus/prometheus-ingress-preprod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-monitoring
spec:
  rules:
  - host: prometheus-preprod-k8s.flowlog-stats.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-monitoring
          servicePort: 9090
